--- a/_akoa_videos/1-1.md
+++ b/_akoa_videos/1-1.md
@@ -1,9 +1,9 @@
 ---
 layout: video
-title: Session 1
+title: 1.1 Beneath the Iron Vale
 yt_id: g2Zf97jIT7Y
 date: 16/08/2021
 embed: <iframe width="560" height="315" src="https://www.youtube.com/embed/g2Zf97jIT7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ---
 
-Session 1
+Session 1 - Beneath the Iron Vale
